--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,8 @@ dependencies:
   firebase_core: ^3.1.1
   sign_in_button: ^3.2.0
   google_sign_in: ^6.2.1
+  cloud_firestore: ^5.0.2
+  get: ^4.6.6
 
 dev_dependencies:
   flutter_test:
