--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   google_sign_in: ^6.2.1
   cloud_firestore: ^5.0.2
   get: ^4.6.6
+  date_time: ^0.11.0
 
 dev_dependencies:
   flutter_test:
